# user-service

./: README.md  pyproject.toml
src/user_service/: __init__.py  app.py  config.py  main.py  routes.py  schemas.py  service.py
