[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "user-service"
version = "2.0.0"
description = "User profile management microservice"
requires-python = ">=3.9"
dependencies = ["core-logger", "fastapi>=0.110", "uvicorn[standard]>=0.27"]

[tool.setuptools.packages.find]
where = ["src"]
